# opengl-series

./: .gitignore  CMakeLists.txt
source/01_project_skeleton/: CMakeLists.txt
source/01_project_skeleton/source/: main.cpp
source/02_textures/: CMakeLists.txt
source/02_textures/source/: main.cpp
source/03_matrices/: CMakeLists.txt
source/03_matrices/source/: main.cpp
source/04_camera/: CMakeLists.txt
source/04_camera/source/: main.cpp
source/05_asset_instance/: CMakeLists.txt
source/05_asset_instance/source/: main.cpp
source/06_diffuse_lighting/: CMakeLists.txt
source/06_diffuse_lighting/source/: main.cpp
source/07_more_lighting/: CMakeLists.txt
source/07_more_lighting/source/: main.cpp
source/08_even_more_lighting/: CMakeLists.txt
source/08_even_more_lighting/source/: main.cpp
