cmake_minimum_required(VERSION 3.7)

add_subdirectory(source/01_project_skeleton)
add_subdirectory(source/02_textures)
add_subdirectory(source/03_matrices)
add_subdirectory(source/04_camera)
add_subdirectory(source/05_asset_instance)
add_subdirectory(source/06_diffuse_lighting)
add_subdirectory(source/07_more_lighting)
add_subdirectory(source/08_even_more_lighting)